[package]
name = "chromaprint-wasm"
version = "0.1.2"
authors = ["Martin Charles <martincharles07@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.29"
chromaprint = { git = "https://github.com/0xcaff/rust-chromaprint.git" }
wee_alloc = "0.4.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
